# agent-tinder-link

./: .gitignore  README.md  package-lock.json  package.json
backend/agent_backend/: AGENTS.md  README.md  pyproject.toml
backend/agent_backend/src/agent_backend/: crew.py  llm_runtime.py  main.py  models.py  parsers.py  prompts.py  sessions.py
backend/agent_backend/src/agent_backend/config/: agents.yaml  tasks.yaml
backend/agent_backend/src/agent_backend/flows/: __init__.py  conversation.py  matching.py  personality.py
backend/agent_backend/src/agent_backend/matches/: surabhi_20260415_144632_matches.json
backend/agent_backend/src/agent_backend/response/: agent_response.json
backend/agent_backend/src/agent_backend/services/: __init__.py  conversation_service.py  evaluation_service.py  matching_service.py  personality_service.py  service_runtime.py
frontend/agent-tinder-finder/: app.json  package-lock.json  package.json  tsconfig.json
frontend/agent-tinder-finder/animations/: HeartConnectionIntro.tsx  useFloating.ts
frontend/agent-tinder-finder/app/: _layout.tsx  forgot-password.tsx  login.tsx  splash.tsx
frontend/agent-tinder-finder/app/(tabs)/: _layout.tsx  index.tsx  matches.tsx
frontend/agent-tinder-finder/constants/: kindraTheme.ts  soulSyncTheme.ts
frontend/agent-tinder-finder/context/: AuthContext.tsx
frontend/agent-tinder-finder/navigation/: PremiumTabBar.tsx
frontend/agent-tinder-finder/screens/: ChatScreen.tsx  DashboardScreen.tsx  HomeScreen.tsx  MatchesScreen.tsx  ProfileScreen.tsx
(+18 files in other folders)
